--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "behat/mink-extension": "dev-CommandTimeout",
         "behat/mink-sahi-driver": "*",
         "drupal/drupal-extension": "*",
-        "symfony/finder": "2.5.*@dev"
+        "symfony/finder": "2.5.*@dev",
+        "symfony/process": "2.3.*@dev",
+        "symfony/event-dispatcher": "2.5.*@dev"
     },
     "repositories": [
         {
