--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,15 @@
         "behat/mink-sahi-driver": "*",
         "drupal/drupal-extension": "*",
         "symfony/finder": "2.5.*@dev",
+        "symfony/filesystem": "2.5.*@dev",
         "symfony/process": "2.3.*@dev",
         "symfony/event-dispatcher": "2.5.*@dev"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "4.0.*@dev",
+        "mikey179/vfsStream": "1.3.*@dev",
+        "mockery/mockery": "0.9.*@dev",
+        "fzaninotto/faker": "1.4.*@dev"
     },
     "repositories": [
         {
