--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "issues": "https://github.com/alnutile/behat_cron_runner/issues"
     },
     "require": {
+        "behat/behat": "2.5.3",
         "behat/mink-zombie-driver": "*",
         "alnutile/behat-wrapper": "dev-master",
         "alnutile/business-selector-extension": "dev-master",
@@ -25,10 +26,10 @@
         "behat/mink-extension": "dev-CommandTimeout",
         "behat/mink-sahi-driver": "*",
         "drupal/drupal-extension": "*",
-        "symfony/finder": "2.5.*@dev",
-        "symfony/filesystem": "2.5.*@dev",
-        "symfony/process": "2.3.*@dev",
-        "symfony/event-dispatcher": "2.5.*@dev"
+        "symfony/finder": "2.5.*",
+        "symfony/filesystem": "2.5.*",
+        "symfony/process": "2.3.*",
+        "symfony/event-dispatcher": "2.5.*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.0.*@dev",
